# CCABN-Interface-GDExtension

./: .gitignore  CMakeLists.txt  README.md  ccabn_interface.gdextension  ccabn_videostream.gdextension
.claude/: project_specifications.md
src/: camera_stream_receiver.cpp  camera_stream_receiver.h  register_types.cpp  register_types.h  simple_logger.cpp  simple_logger.h  video_stream.cpp  video_stream.h  video_stream_receiver.cpp  video_stream_receiver.h
